Changes with Apache 1.3.28

  *) PORT: Enable SINGLE_LISTEN_UNSERIALIZED_ACCEPT for AIX 4.3.2
     and above.  Update AIX configure logic to allow higher AIX 
     release numbers without having to change Apache.
     [Jeff Trawick]

Changes with Apache 1.3.27

  *) SECURITY: CAN-2002-0840 (cve.mitre.org)
     Prevent a cross-site scripting vulnerability in the default
     error page.  The issue could only be exploited if the directive
     UseCanonicalName is set to Off and a server is being run at
     a domain that allows wildcard DNS.  [Matthew Murphy]

  *) SECURITY CAN-2002-0843 (cve.mitre.org)
     Fix some possible overflows in ab.c that could be exploited by
     a malicious server. Reported by David Wagner. [Jim Jagielski]

  *) Included a patch submitted by Sander van Zoest (#9181) and
     written by Michael Radwin whichs is essentially a work around
     for the adding headers to error responses. As apache does not
     go through the proper chain for non 2xx responses. This patch
     adds an ErrorHeader directive; which is for non 2xx replies the
     direct analog of the existing Header directive. This is usefull
     during 3xx redirects or more complex 4xx auth schemes. [Dirk-
     Willem van Gulik]

  *) Included the patch submitted by Sander van Zoest (#12712) which
     prevents just 'anything' being sucked in when doing gobbeling in
     complete directories - such as editor backup files and other
     cruft. This patch allows us to tailor/control this properly by
     allowing simple wildcards such as *.conf. [Dirk-Willem van Gulik]

  *) SECURITY CAN-2002-0839 (cve.mitre.org)
     Add the new directive 'ShmemUIDisUser'. By default, Apache
     will no longer set the uid/gid of SysV shared memory scoreboard
     to User/Group, and it will therefore stay the uid/gid of
     the parent Apache process. This is actually the way it should
     be, however, some implementations may still require this, which