@@ -1,5 +1,9 @@
 Changes with Apache 1.3.28
 
+  *) mod_setenvif: Add SERVER_ADDR special keyword to allow
+     envariable setting according to the server IP address
+     which received the request.  [Ken Coar]
+
   *) PORT: Enable SINGLE_LISTEN_UNSERIALIZED_ACCEPT for AIX 4.3.2
      and above.  Update AIX configure logic to allow higher AIX 
      release numbers without having to change Apache.
